--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
 </head>
 <body class="mat-typography">
-  <app-root></app-root>
+  <assessment-root></assessment-root>
   <script src="https://www.gstatic.com/firebasejs/7.22.0/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/7.22.0/firebase-analytics.js"></script>
 </body>
